<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username1"></TextView>

        <EditText
            android:id="@+id/idUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduUsername"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"></TextView>

        <EditText
            android:id="@+id/idEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introdu_email"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"></TextView>

        <EditText
            android:id="@+id/idPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introdu_parola"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"></TextView>

        <EditText
            android:id="@+id/idPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Introdu telefon:"
            android:inputType="phone"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"></TextView>

        <EditText
            android:id="@+id/idNume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Introdu numele:"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="400px"
            android:text="Log in"
            android:textAlignment="center"
            android:onClick="salvare"
            android:id="@+id/salvare"></Button>

        <Button
            android:id="@+id/anulare"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cancel"
            android:onClick="anulare"/>
    </LinearLayout>
</LinearLayout>