<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".seminar4Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name">
                </TextView>

                <EditText
                    android:id="@+id/idNume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Introdu numele:"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/introdu_parola">
                </EditText>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Introdu o data:"
                android:textSize="80px">
            </TextView>
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </DatePicker>

            <Switch
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Switch:"
                android:layout_marginLeft="150dp"
                >
            </Switch>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:numStars="5">
            </RatingBar>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ProgressBar>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OK!">
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>